deployment/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adp-customer-account-service
  labels:
    app: adp-customer-account-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: adp-customer-account-service
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: adp-customer-account-service
    spec:
      containers:
        - name: adp-customer-account-service
          image: ardalo/adp-customer-account-service:latest
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              memory: 700Mi
              cpu: 200m
            limits:
              memory: 1Gi
              cpu: 300m
          livenessProbe:
            httpGet:
              path: /alive
              port: http
          readinessProbe:
            httpGet:
              path: /ready
              port: http
---
apiVersion: v1
kind: Service
metadata:
  name: adp-customer-account-service
  labels:
    app: adp-customer-account-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: adp-customer-account-service
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adp-customer-account-service
  labels:
    app: adp-customer-account-service
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: adp-customer-account-service
                port:
                  number: 80
